--- a/views/_shared/templates/default.twig
+++ b/views/_shared/templates/default.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
  <head>
-  <meta http-equiv='Content-type' content='text/html; charset=<?php echo APP_CHARSET ?>' />
+  <meta http-equiv='Content-type' content='text/html; charset={{ constant('APP_CHARSET') }}' />
   <title>KumbiaPHP web &amp; App Framework</title>
   {% block css %}
     {{ css('bienvenida') }}
@@ -14,12 +14,12 @@
             <div class='alignright'>
                 <p id='config'>
                     <span class='app'><?php echo basename(dirname(APP_PATH)) ?></span>
-                    {{ Html_link('pages/show/kumbia/status/', 'Config', 'title="Ver configuración de la aplicación"') }}
+                    <a title="Ver configuración de la aplicación" href="{{ asset('pages/show/kumbia/status/') }}">Config</a>
                 </p>
              </div>
              
             <h1 id='logo'>KumbiaPHP</h1>
-            <h2 id='info-app'>web &amp; app Framework versión {{ kumbia_version() }}</h2>
+            <h2 id='info-app'>web &amp; app Framework versión 1.0</h2>
         </div>
 
         {% block content %}
